Added opensearch dependency to traefik.
Signed-off-by: mvtab <mvtabilitas@protonmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -134,8 +134,9 @@ services:
     image: traefik:v3.2.3
     depends_on:
     - postgres
-    - localai
     - redis
+    - opensearch
+    - localai
     - flowise
     healthcheck:
       test: ["CMD", "traefik", "healthcheck"]
